samples/_failures_safe/1761465388_6b824d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0441a721.c: In function ‘main’:
./samples/SAFE/__tmp_0441a721.c:144:21: error: expected declaration or statement at end of input
  144 |                     printf("[%s] %s: %s\n", entries[i].timestamp, level_name, entries[i].message);
      |                     ^~~~~~
./samples/SAFE/__tmp_0441a721.c:144:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0441a721.c:144:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0441a721.c:144:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0441a721.c:144:21: error: expected declaration or statement at end of input
